version 1.3.2
- Fix bug in auto-determination of lag in ADF test: was looking
  at the wrong coefficient in some cases

01/19/2005 version 1.3.1
- Add new dataset structure "wizard" in place of the old dialogs
  for setting frequency, starting observation and time-series
  or panel interpretation of the data
- Add FIML and LIML estimation to system command; also add 
  LR over-identification tests for these systems
- Add Hansen-Sargan over-identification test for SUR and 3SLS
  system estimates
- Add "--iterate" option for estimation of systems via SUR and
  3SLS
- Add "estimate" command for equation systems, and modify the
  "system" command to allow the user to define named systems
- Add gui configuration for robust standard errors options
- VAR dialog: add options for robust standard errors, and for
  the printing of impulse responses
- Add univariate kernel density estimation (under the Variable
  menu in the gui program -- no script counterpart)
- Purge the lesser-used model selection statistics, and use
  the original formulae for AIC and Schwarz's BIC
- Improve feel of data editing spreadsheet, gtk2 version
- Model dialog box: allow shifting of regressors with middle-
  click of mouse
- Add groupwise heteroskasticity test for panel data
- Extend handling of missing observations in panel context,
  including case of unbalanced panels (to some degree)
- Fix for appending observations (built-in spreadsheet): plotting
  vars were not being automatically extended
- Fix for deleting variables: don't show the "variables have been
  renumbered" message if the only vars to be renumbered are
  hidden ones
- Fix newly introduced bug in time-series graphs: don't show two y 
  axes if only one is actually used
- Fix for johansen cointegration test: don't crash if the user
  puts the const into the list of variables
- Fix bug in forecasts with standard errors, for case of missing
  observations
- Fix bug in reading of CSV files: crash if variable names were not