@@ -211,7 +211,7 @@ release of gnuplot is version 4.0 (dated April 2004), which is available via
 <h2><a name="man">Manual</a></h2>
 
 <p>A comprehensive manual
-is available in PDF format (c. 1Mb, around 90 pages),  
+is available in PDF format (c. 1.5Mb, 100+ pages),  
 in both US letter size (<a href="./manual.pdf">manual.pdf</a>)
 and A4 size (<a href="./manual-a4.pdf">manual-a4.pdf</a>).
 An Italian translation of the manual
