@@ -1,6 +1,11 @@
 version 1.3.2
 - Fix bug in auto-determination of lag in ADF test: was looking
   at the wrong coefficient in some cases
+- Add auto-lag option to the GUI dialog box for the ADF test
+- Remember the options selected in the ADF dialog from one invocation
+  to the next
+- Help files: include menu-path information in the GUI help file as
+  well as the script commands help
 
 01/19/2005 version 1.3.1
 - Add new dataset structure "wizard" in place of the old dialogs
